--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
         android:orderInCategory="1"
         android:showAsAction="always"
-        android:title="@string/search" />
+        android:title="@string/search"
+        tools:ignore="AppCompatResource" />
 
     <item
         android:id="@+id/action_switch"
         android:icon="@drawable/ic_list"
         android:orderInCategory="2"
         android:showAsAction="always"
-        android:title="@string/search" />
+        android:title="@string/search"
+        tools:ignore="AppCompatResource" />
 </menu>
