--- a/app/src/main/res/layout-sw600dp/activity_character.xml
+++ b/app/src/main/res/layout-sw600dp/activity_character.xml
@@ -12,12 +12,11 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <fragment
-        android:id="@+id/fragment_list"
-        android:name="com.xfinity.characterviewer.ui.character.list.CharacterListFragment"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"/>
+        android:layout_weight="2" />
 
 
 </LinearLayout>
